# simple_perception

./: .gitignore  README.md  package.xml  setup.py  thirdparty.repos
launch/: simple_perception.launch.py
simple_perception/: entity_tracker.py  entity_tracker_fake_3d.py  package.xml  setup.cfg  setup.py
simple_perception/launch/: calibration.launch.py  entity_tracker_monocular_3d.launch.py  monocolular_depth.launch.py  simple_perception.launch.py
simple_perception/simple_perception/: depth_calibration_helper.py  detection_3d_simulator.py  entity_tracker.py  entity_tracker_fake_3d.py  entity_tracker_monocular_3d.py  yolo_to_standard.py
simple_perception_interfaces/: CMakeLists.txt  package.xml
simple_perception_interfaces/srv/: SetTargetClass.srv
