<?xml version="1.0"?>
<package format="3">
  <name>simple_perception_interfaces</name>
  <version>0.1.0</version>
  <description>Service interfaces for simple_perception</description>

  <maintainer email="rodrigo.perez@urjc.es">Rodrigo Pérez-Rodríguez</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
